* Windows: vastly improved full screen support
* Windows: fixed non-functioning Fewer Stars menu option
* Unix: fixed problems with '--enable-debug' under automake (dramsey)
* Unix: Enhanced autoconfigure to enable automated distribution build, as well
        as building the buildstardb program used to create stars.dat (dramsey)
* Unix: Fixed Problem with --enable-debug=no acting as if --enable-debug=yes
        had been given. (dramsey)
* Unix: Changed --enable-gtk into --with-gtk, and made it automatic if Gtk+ and
        GtkGLArea is present. (dramsey)
* Unix: Inserted testing code for GtkGLArea into configure.in (dramsey)
* Unix: Integrated a current gnome macros package. (dramsey)
* Removed many errors and compiler warnings (dramsey)
* Label Galaxies option. (dramsey)
* Unix Gtk : Added several menu options already present in the windows version.
             (dramsey)
* Unix Gtk : Fixed problem where giving keyboard commands wasn't updating
	     the toggle menu gadgets. (dramsey)
* Unix : Handle timezones correctly. (dramsey)
* Fixed constellation typo: Cyngi -> Cygni
* Much better Data analysis and Correction for the buildstardb program
  leading to better data in stars.dat . Verbosity of the buildstardb program
  may now be controlled by commandline argument. (dramsey)
* Improved solar system catalog file format so it's easier to install add-ons
* Scan extras directory for solar system catalog files
* Fixed pixel shader rendering path so it uses star light color
* Added support for textures in 3DS models
* Fixed locations menu
* Improved locations menu so that position and frame of reference are saved
  and restored.
* Fixed broken script commands: setposition, setorientation, and move
* Display the names of tracked and followed objects
* Windows: replaced proliferating render and label options in menu with
  a single modeless dialog.
* Fixed period and rotation of Phoebe

1.2.1
* Unix: configure.in changes to better find OpenGL libraries by Bruckner